--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -45,7 +45,7 @@ body {
         position: absolute;
         top: 50%;
         left: 50%;
-        transform: translate(-50%,-50%);
+        margin-left: -25px;
     }
     &.off {
       visibility: hidden;
@@ -77,6 +77,7 @@ a {
     text-decoration: underline;
     text-underline-offset: .2rem;
     text-decoration-thickness: .1rem;
+    transition: all .3s ease;
 }
 
 a:hover {
