--- a/scss/pages/section-main-list-collections.scss
+++ b/scss/pages/section-main-list-collections.scss
@@ -1,7 +1,4 @@
 
-
-// style default
-
 .collections-default {
     .head-alignment--left {
         text-align: left;
@@ -15,29 +12,20 @@
         text-align: center;
     }
     
-    .collections-list__head {
-        margin-bottom: 4rem;
+    color: var(--text-color-main-list-collections);
+    background: var(--background-color-main-list-collections);
+    padding-top: calc(.7*var(--pad-top-main-list-collections));
+    padding-bottom: calc(.7*var(--pad-bot-main-list-collections));
+    @media screen and (min-width: 991px) {
+        padding-top: var(--pad-top-main-list-collections);
+        padding-bottom: var(--pad-bot-main-list-collections);
     }
-    
-    .featured-list-collections__sub_heading {
-        color: var(--sub_title_color-list-collections-default);
-    }
-    
-    .featured-list-collections__heading {
-        color: var(--title-color-list-collections-default);
-        margin-bottom: 1rem;
-    }
-    
-    .featured-list-collections__text {
-        p {
-            margin-bottom: 0;
+    .pagination__item {
+        color: var(--title-color-main-list-collections);
+        &:hover {
+            color: var(--color-primary);
         }
     }
-    
-    color: var(--text-color-list-collections-default);
-    background: var(--background-color-list-collections-default);
-    padding-top: var(--pad-top-list-collections-default);
-    padding-bottom: var(--pad-bot-list-collections-default);
     
     .list-collections-grid {
         margin-bottom: -3rem;
@@ -104,7 +92,7 @@
 
         h3 {
             margin-bottom: .5rem;
-            
+            font-size: calc(var(--font-heading-scale) * 1.4rem);
             svg {
                 width: 20px;
                 height: 20px;
@@ -115,18 +103,49 @@
                 text-decoration: none;
                 display: flex;
                 align-items: center;
+                color: var(--title-color-main-list-collections);
+                &:hover {
+                    color: var(--color-primary);
+                }
             }
         }
 
         h5 {
             font-weight: 400;
             margin-bottom: 0;
-            color: var(--text-color-list-collections-default);
+            color: var(--text-color-main-list-collections);
+        }
+    }
+
+    .list-collections-box {
+        display: flex;
+        align-items: center;
+    }
+    .list-collections-count {
+        order: 1;
+        margin-bottom: 0;
+        padding-right: 30px;
+    }
+    .pagination-wrapper {
+        order: 2;
+        margin-left: auto;
+        .pagination__item--next {
+            padding-left: 0;
+        }
+        .pagination__item--prev {
+            padding-right: 0;
         }
     }
     
     @media screen and (max-width: 767px) {
-       
+        .list-collections-box { 
+            display: block;
+        }
+        .list-collections-count {
+            margin-bottom: 3rem;
+            padding-right: 0;
+            text-align: center;
+        }
         .list-collections-grid {
             overflow: auto;
             flex-wrap: nowrap;
