--- a/snippets/icons-svg.liquid
+++ b/snippets/icons-svg.liquid
@@ -176,6 +176,19 @@
         >
             <path fill="currentColor" d="M0 15c0 0.128 0.049 0.256 0.146 0.354 0.195 0.195 0.512 0.195 0.707 0l8.646-8.646 8.646 8.646c0.195 0.195 0.512 0.195 0.707 0s0.195-0.512 0-0.707l-9-9c-0.195-0.195-0.512-0.195-0.707 0l-9 9c-0.098 0.098-0.146 0.226-0.146 0.354z"></path>
         </svg>
+    {% when 'arrow' %}
+        <svg
+            viewBox="0 0 14 10"
+            fill="none"
+            aria-hidden="true"
+            focusable="false"
+            role="presentation"
+            class="icon icon-arrow"
+            xmlns="http://www.w3.org/2000/svg"
+        >
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M8.537.808a.5.5 0 01.817-.162l4 4a.5.5 0 010 .708l-4 4a.5.5 0 11-.708-.708L11.793 5.5H1a.5.5 0 010-1h10.793L8.646 1.354a.5.5 0 01-.109-.546z" fill="currentColor">
+        </svg>
+
     {% when 'arrow-left' %}
         <svg
             version="1.1"
