--- a/sections/main-head.liquid
+++ b/sections/main-head.liquid
@@ -94,7 +94,7 @@
 
 {% schema %}
 {
-    "name": "Head",
+    "name": "Main Head",
     "class": "section",
     "settings": [
         {
@@ -178,7 +178,6 @@
             "id": "text_color",
             "label": "Text color"
         },
-
         {
             "type": "checkbox",
             "id": "full_width",
