--- a/sections/main-list-collections.liquid
+++ b/sections/main-list-collections.liquid
@@ -98,7 +98,7 @@
 
 {% schema %}
 {
-    "name": "t:sections.main-list-collections.name",
+    "name": "Main list collections",
     "class": "section",
     "settings": [
         {
